[package]
name = "fetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
futures = "0.3.28"
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.11.17", features = ["blocking", "json"] }
ring = "0.16.20"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.6"
tokio = { version = "1.28.1", features = ["macros"] }
